# mastering-large-datasets

./: pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Ch02/: competitor_blog.py  parallel_blog_processing.py
Ch03/: twitter_demographics.py
Ch04/: even_numbers.py
Ch05/: evenfilter.py  products.py  summation.py
Ch06/: imap.py  starmap.py  timing-chunks.py  timing.py
Ch07/: highest_scoring.py  spark_scores.py  wc_mapper.py  wc_reducer.py
hadoop-playground/: workflow.md
hadoop-playground/Ch07/: run.sh  score_words.py  wc_mapper.py  wc_reducer.py
hadoop-playground/Ch08/: run.sh
hadoop-playground/devto/: mapper.py  reducer.py  run.sh  run.sh.save
hadoop-playground/devto/input/: f4.txt
notebooks/: Ch02_notebook.ipynb  Ch09_notebook.ipynb  Ch10_notebook.ipynb
playground/: RDD_byExample.ipynb  RDD_doc.ipynb  filter_frequencies_by_reduce.py  fizzbuzz_lazymap_wrong_with_internalstate.py  number_cleaning.py  parallel_filter.py  parallel_frequencies.py  poem_puzzle_practice.py  reduce_exercises_chapter5.py
playground/path/to/file/: .part-00000.crc  .part-00001.crc  .part-00002.crc  .part-00003.crc  part-00000  part-00001  part-00002  part-00003
