[tool.poetry]
name = "mastering-large-datasets"
version = "0.1.0"
description = "python for large datasets"
authors = ["trungnghiahoang96 <hoangtrungnghiabn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
toolz = "^0.11.1"
urllib3 = "^1.26.4"
black = "^20.8b1"
networkx = "^2.5.1"
python-twitter = "^3.5"
dill = "^0.3.3"
pathos = "^0.2.7"
pyspark = "^3.1.1"
jupyterlab = "^3.0.15"
jupyterlab-code-formatter = "^1.4.10"
isort = "^5.8.0"
nbclassic = "^0.2.7"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
